[gd_scene load_steps=2 format=2]

[ext_resource path="res://option_node.gd" type="Script" id=1]

[node name="OptionNode" type="GraphNode"]
margin_right = 32.0
margin_bottom = 30.0
title = "Option"
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 227.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 211.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 29.0
text = "Name"

[node name="LineEditName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 211.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 211.0
margin_bottom = 70.0

[node name="ButtonAddRow" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 79.0
margin_bottom = 32.0
text = "Add Row"

[node name="CheckBoxMultiple" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 83.0
margin_right = 173.0
margin_bottom = 32.0
text = "Multiple"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 211.0
margin_bottom = 98.0
size_flags_horizontal = 3
columns = 5

[node name="LabelNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 22.0
margin_bottom = 24.0
text = "No"

[node name="LabelCheck" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 26.0
margin_right = 72.0
margin_bottom = 24.0
text = "Check"

[node name="LabelDescription" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 76.0
margin_right = 161.0
margin_bottom = 24.0
text = "Description"

[node name="LabelValue" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 165.0
margin_right = 207.0
margin_bottom = 24.0
text = "Value"

[node name="LabelDelete" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 211.0
margin_right = 211.0
margin_bottom = 24.0

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEditName" to="." method="_on_line_edit_name_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ButtonAddRow" to="." method="_on_button_add_row_pressed"]
